--- a/app/src/main/res/drawable/ic_heart.xml
+++ b/app/src/main/res/drawable/ic_heart.xml
@@ -1,6 +1,10 @@
-<vector android:height="24dp" android:viewportHeight="16"
-    android:viewportWidth="16" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000"
-        android:pathData="M8,5.094A3.1,3.1 0,0 0,5.175 3.119,2.84 2.84,0 0,0 2.35,6.081c0,2.323 2.381,4.119 5.65,7.569 3.269,-3.45 5.65,-5.247 5.65,-7.569A2.84,2.84 0,0 0,10.826 3.119,3.1 3.1,0 0,0 8,5.094z"
-        android:strokeColor="#fff" android:strokeWidth=".75"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="18dp"
+    android:height="18dp"
+    android:viewportWidth="18"
+    android:viewportHeight="18">
+  <path
+      android:pathData="M9,5.469A3.649,3.649 0,0 0,5.675 3.119,3.363 3.363,0 0,0 2.35,6.643c0,2.764 2.8,4.9 6.65,9.007 3.848,-4.106 6.65,-6.243 6.65,-9.007A3.363,3.363 0,0 0,12.326 3.119,3.648 3.648,0 0,0 9,5.469z"
+      android:fillColor="#ff8479"
+      android:fillType="evenOdd"/>
 </vector>
