--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -214,7 +214,7 @@
         android:layout_gravity="bottom|end">
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fb_main_start"
+            android:id="@+id/fb_game_submit"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="center"
