--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -199,10 +199,10 @@
                 </LinearLayout>
 
                 <GridView
+                    android:id="@+id/grid_main_poem"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                </GridView>
+                    android:layout_height="match_parent"
+                    android:numColumns="2" />
             </LinearLayout>
         </FrameLayout>
 
@@ -214,7 +214,7 @@
         android:layout_gravity="bottom|end">
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fb_game_submit"
+            android:id="@+id/fb_main_start"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="center"
