삼행시 입력 화면 수정2

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -87,7 +87,7 @@
                     android:id="@+id/tv_game_firstword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ic_word"
+                    android:background="@drawable/ic_word_vacant"
                     android:gravity="center"
                     android:letterSpacing="-0.03"
                     android:lineSpacingExtra="27sp"
@@ -123,7 +123,7 @@
                     android:id="@+id/tv_game_secondword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ic_word"
+                    android:background="@drawable/ic_word_vacant"
                     android:gravity="center"
                     android:letterSpacing="-0.03"
                     android:lineSpacingExtra="27sp"
@@ -158,7 +158,7 @@
                     android:id="@+id/tv_game_thirdword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ic_word"
+                    android:background="@drawable/ic_word_vacant"
                     android:gravity="center"
                     android:letterSpacing="-0.03"
                     android:lineSpacingExtra="27sp"
