--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,202 +16,203 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="258dp"
-            android:background="@drawable/back_quiz_main"
-            android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="258dp"
+                    android:background="@drawable/back_quiz_main"
+                    android:orientation="vertical">
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:gravity="center">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:gravity="center">
 
-                <ImageView
-                    android:id="@+id/tv_game_timericon"
-                    android:layout_width="38dp"
-                    android:layout_height="25dp"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/ic_timer_clock" />
+                        <ImageView
+                            android:id="@+id/tv_game_timericon"
+                            android:layout_width="38dp"
+                            android:layout_height="25dp"
+                            android:layout_gravity="center"
+                            android:layout_marginRight="5dp"
+                            android:src="@drawable/ic_timer_clock" />
 
-                <TextView
-                    android:id="@+id/tv_game_timer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="#ffffff"
-                    android:letterSpacing="-0.03"
-                    android:lineSpacingExtra="10sp"
-                    android:text="60" />
+                        <TextView
+                            android:id="@+id/tv_game_timer"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:letterSpacing="-0.03"
+                            android:lineSpacingExtra="10sp"
+                            android:text="60"
+                            android:textColor="#ffffff"
+                            android:textSize="16sp" />
 
-            </LinearLayout>
+                    </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_game_beginCounter"
-                android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center"
-                android:text="디프만"
-                android:textSize="33sp"
-                android:textColor="#ffffff"
-                android:letterSpacing="-0.03"
-                android:lineSpacingExtra="22sp"
-                tools:text="디 프 만"/>
+                    <TextView
+                        android:id="@+id/tv_game_beginCounter"
+                        android:layout_width="match_parent"
+                        android:layout_height="96dp"
+                        android:gravity="center"
+                        android:letterSpacing="-0.03"
+                        android:lineSpacingExtra="22sp"
+                        android:text="디프만"
+                        android:textColor="#ffffff"
+                        android:textSize="33sp"
+                        tools:text="디 프 만" />
 
 
-        </LinearLayout>
+                </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/ll_game_answer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="59dp"
-                android:layout_marginRight="20dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_game_firstword"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/ic_word_vacant"
-                    android:gravity="center"
-                    android:letterSpacing="-0.03"
-                    android:lineSpacingExtra="27sp"
-                    android:textColor="#ff8479"
-                    android:textSize="25sp" />
-
-                <EditText
-                    android:id="@+id/et_game_firstword"
+                <LinearLayout
+                    android:id="@+id/ll_game_answer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:background="@drawable/back_insert_text"
-                    android:hint="입력!"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="3sp"
-                    android:paddingStart="10dp"
-                    android:textColor="#c3c3c3"
-                    android:textSize="14sp" />
+                    android:orientation="vertical">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="59dp"
+                        android:layout_marginRight="20dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_game_firstword"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_word_vacant"
+                            android:gravity="center"
+                            android:letterSpacing="-0.03"
+                            android:lineSpacingExtra="27sp"
+                            android:textColor="#ff8479"
+                            android:textSize="25sp" />
+
+                        <EditText
+                            android:id="@+id/et_game_firstword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/back_insert_text"
+                            android:hint="입력!"
+                            android:letterSpacing="-0.02"
+                            android:lineSpacingExtra="3sp"
+                            android:maxLines="1"
+                            android:paddingStart="10dp"
+                            android:textColor="#c3c3c3"
+                            android:textSize="14sp" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="29dp"
+                        android:layout_marginRight="20dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_game_secondword"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_word_vacant"
+                            android:gravity="center"
+                            android:letterSpacing="-0.03"
+                            android:lineSpacingExtra="27sp"
+                            android:textColor="#ff8479"
+                            android:textSize="25sp" />
+
+                        <EditText
+                            android:id="@+id/et_game_secondword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/back_insert_text"
+                            android:hint="입력!"
+                            android:letterSpacing="-0.02"
+                            android:lineSpacingExtra="3sp"
+                            android:paddingStart="10dp"
+                            android:textColor="#c3c3c3"
+                            android:textSize="14sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="29dp"
+                        android:layout_marginRight="20dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_game_thirdword"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_word_vacant"
+                            android:gravity="center"
+                            android:letterSpacing="-0.03"
+                            android:lineSpacingExtra="27sp"
+                            android:textColor="#ff8479"
+                            android:textSize="25sp" />
+
+                        <EditText
+                            android:id="@+id/et_game_thirdword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/back_insert_text"
+                            android:hint="입력!"
+                            android:letterSpacing="-0.02"
+                            android:lineSpacingExtra="3sp"
+                            android:maxLines="1"
+                            android:paddingStart="10dp"
+                            android:textColor="#c3c3c3"
+                            android:textSize="14sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="29dp"
-                android:layout_marginRight="20dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_game_secondword"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/ic_word_vacant"
-                    android:gravity="center"
-                    android:letterSpacing="-0.03"
-                    android:lineSpacingExtra="27sp"
-                    android:textColor="#ff8479"
-                    android:textSize="25sp" />
-
-                <EditText
-                    android:id="@+id/et_game_secondword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:background="@drawable/back_insert_text"
-                    android:hint="입력!"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="3sp"
-                    android:paddingStart="10dp"
-                    android:textColor="#c3c3c3"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="29dp"
-                android:layout_marginRight="20dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_game_thirdword"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/ic_word_vacant"
-                    android:gravity="center"
-                    android:letterSpacing="-0.03"
-                    android:lineSpacingExtra="27sp"
-                    android:textColor="#ff8479"
-                    android:textSize="25sp" />
-
-                <EditText
-                    android:id="@+id/et_game_thirdword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:background="@drawable/back_insert_text"
-                    android:hint="입력!"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="3sp"
-                    android:paddingStart="10dp"
-                    android:textColor="#c3c3c3"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end">
-
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/fb_game_submit"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="16dp"
-                    android:src="@android:color/transparent" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:elevation="16dp"
-                    android:text="제출하자"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp" />
-            </FrameLayout>
-
-        </LinearLayout>
 
         </ScrollView>
 
     </LinearLayout>
 
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fb_game_submit"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:src="@android:color/transparent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:elevation="16dp"
+            android:text="제출하자"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="14sp" />
+    </FrameLayout>
 </FrameLayout>
 
 
