삼행시 입력 화면 수정4

--- a/app/src/main/res/layout/layout_fail.xml
+++ b/app/src/main/res/layout/layout_fail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="#99ffffff">
+    android:background="@drawable/back_info">
 
     <ImageView
         android:id="@+id/img_game_fail"
