--- a/app/src/main/res/layout/layout_pass.xml
+++ b/app/src/main/res/layout/layout_pass.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="#a0000000">
+    android:background="@drawable/back_info">
 
     <ImageView
         android:id="@+id/img_game_pass"
         android:padding="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#a0000000"
+        android:background="#00000000"
         android:src="@drawable/img_pass" />
 
 </LinearLayout>
