--- a/app/src/main/res/layout/header_main.xml
+++ b/app/src/main/res/layout/header_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -153,6 +153,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
                     android:background="@drawable/back_fill_red"
+                    android:elevation="0dp"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:padding="7dp"
