--- a/app/src/main/res/layout/item_poem.xml
+++ b/app/src/main/res/layout/item_poem.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_poem"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
     android:background="@drawable/item_poem_back"
     android:orientation="vertical">
 
@@ -31,7 +32,7 @@
             android:drawableStart="@drawable/ic_heart_fill_white"
             android:gravity="center"
             android:minHeight="0dp"
-            android:paddingStart="30dp"
+            android:paddingStart="40dp"
             android:text="0"
             android:textColor="@android:color/white" />
 
