--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back_info"
+    android:background="@color/colorDialog"
     android:orientation="vertical">
 
     <Button
