--- a/app/src/main/res/layout/dialog_pass.xml
+++ b/app/src/main/res/layout/dialog_pass.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="@drawable/back_info">
+    android:background="@color/colorDialog"
+    android:gravity="center">
 
     <ImageView
-        android:id="@+id/img_game_pass"
-        android:padding="30dp"
+        android:id="@+id/iv_game_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#00000000"
+        android:padding="30dp"
         android:src="@drawable/img_pass" />
 
 </LinearLayout>
