삼행시 정렬 버튼 터치 이벤트 구현

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#ff8479</color>
     <color name="colorDarkerGray">#606060</color>
     <color name="colorDialog">#30ffffff</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
