--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,72 @@
 
         <include layout="@layout/header_main" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="44dp"
+                android:orientation="horizontal"
+                android:paddingBottom="14dp">
+
+                <Button
+                    android:id="@+id/btn_main_latest"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="12dp"
+                    android:background="@drawable/back_fill_red"
+                    android:elevation="0dp"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:padding="7dp"
+                    android:text="@string/main_latest"
+                    android:textColor="@android:color/white" />
+
+                <Button
+                    android:id="@+id/btn_main_favorite"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="12dp"
+                    android:background="@drawable/back_stoke_green2"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:padding="7dp"
+                    android:text="@string/main_favorite"
+                    android:textColor="@color/colorDarkerGray" />
+
+                <Button
+                    android:id="@+id/btn_main_mine"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="12dp"
+                    android:background="@drawable/back_stoke_green2"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:padding="7dp"
+                    android:text="@string/main_my_poem"
+                    android:textColor="@color/colorDarkerGray" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_main_no_item"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="50dp"
+                android:gravity="center"
+                android:text="@string/main_no_item"
+                android:textSize="18sp"
+                android:visibility="gone" />
+        </LinearLayout>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_main_poem"
             android:layout_width="match_parent"
