타이머 및 삼행시 제출 기능 구현

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -44,7 +44,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/tv_game_beginCounter"
+                    android:id="@+id/tv_game_board"
                     android:layout_width="match_parent"
                     android:layout_height="96dp"
                     android:gravity="center"
@@ -71,7 +71,7 @@
                         android:id="@+id/tv_game_word1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/ic_word_vacant"
+                        android:background="@drawable/ic_word"
                         android:gravity="center"
                         android:text="@string/game_ready1"
                         android:textColor="@color/colorAccent"
@@ -83,6 +83,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:background="@drawable/back_insert_text"
+                        android:enabled="false"
                         android:hint="@string/game_input"
                         android:maxLines="1"
                         android:paddingStart="15dp"
@@ -104,7 +105,7 @@
                         android:id="@+id/tv_game_word2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/ic_word_vacant"
+                        android:background="@drawable/ic_word"
                         android:gravity="center"
                         android:text="@string/game_ready2"
                         android:textColor="@color/colorAccent"
@@ -116,6 +117,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:background="@drawable/back_insert_text"
+                        android:enabled="false"
                         android:hint="@string/game_input"
                         android:paddingStart="15dp"
                         android:paddingEnd="15dp"
@@ -137,7 +139,7 @@
                         android:id="@+id/tv_game_word3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/ic_word_vacant"
+                        android:background="@drawable/ic_word"
                         android:gravity="center"
                         android:text="@string/game_ready3"
                         android:textColor="@color/colorAccent"
@@ -149,6 +151,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:background="@drawable/back_insert_text"
+                        android:enabled="false"
                         android:hint="@string/game_input"
                         android:maxLines="1"
                         android:paddingStart="15dp"
