--- a/app/src/main/res/layout/item_poem.xml
+++ b/app/src/main/res/layout/item_poem.xml
@@ -18,6 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:textColor="@android:color/white"
             android:textStyle="bold" />
 
